[package]
name = "reveal"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fanova = "0.1"
hporecord = "0.0.1"
itertools = "0.9"
ordered-float = "2"
rlua = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
